--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 						  Perfumer-Creator for the House of CHANEL.
 					 </p>
 
-					 <p> 
-						<span class="big_price">$149.99</span><del class="small_price">$169.99</del>
-					</p>
+					<div class="prices">
+						<span class="big-price">$169.99</span>
+						<span class="small-price">$149.99</span>
+					</div>
 					<br>
 					 <button class="cart"> <span class="icon"><img src="./images/icon-cart.svg" alt="icon"></span>Add to Cart </button>
 				</div>
