--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					 </p>
 
 					<div class="prices">
-						<span class="big-price">$169.99</span>
-						<span class="small-price">$149.99</span>
+						<span class="big_price">$169.99</span>
+						<del class="small_price">$149.99</del>
 					</div>
 					<br>
 					 <button class="cart"> <span class="icon"><img src="./images/icon-cart.svg" alt="icon"></span>Add to Cart </button>
